--- a/memoria/Base.lproj/Main.storyboard
+++ b/memoria/Base.lproj/Main.storyboard
@@ -124,17 +124,17 @@
                                 </cells>
                             </collectionView>
                             <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" axis="vertical" distribution="equalSpacing" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="z6Y-Xt-4gA">
-                                <rect key="frame" x="92.999999999999986" y="507" width="229.66666666666666" height="91"/>
+                                <rect key="frame" x="92.999999999999986" y="507.00000000000006" width="188.66666666666666" height="120.66666666666667"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Selecciona la imgen numero #" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UQP-aS-4Md">
-                                        <rect key="frame" x="0.0" y="0.0" width="229.66666666666666" height="20.333333333333332"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="elige la imagen numero 1" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UQP-aS-4Md">
+                                        <rect key="frame" x="0.0" y="0.0" width="188.66666666666666" height="20.333333333333332"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="correcto/incorrecto" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="19V-Wx-BPK">
-                                        <rect key="frame" x="40.666666666666671" y="20.333333333333336" width="148.33333333333331" height="20.333333333333336"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="19V-Wx-BPK">
+                                        <rect key="frame" x="20.333333333333329" y="20.333333333333329" width="148.33333333333337" height="50"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="148.33333333333337" id="cx9-3x-qFe"/>
                                         </constraints>
@@ -142,8 +142,8 @@
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="#/9 ACIERTOS" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eNH-WZ-iVI">
-                                        <rect key="frame" x="59.666666666666664" y="40.666666666666664" width="110.66666666666669" height="20.333333333333336"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0/9 Aciertos" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eNH-WZ-iVI">
+                                        <rect key="frame" x="39.000000000000007" y="70.333333333333329" width="110.66666666666669" height="20.333333333333329"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="110.66666666666666" id="LFy-iA-Ifr"/>
                                         </constraints>
@@ -152,7 +152,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gkc-LT-EP1">
-                                        <rect key="frame" x="93.333333333333329" y="61" width="42.999999999999986" height="30"/>
+                                        <rect key="frame" x="73" y="90.666666666666671" width="43" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="43" id="bVu-ii-hhE"/>
                                         </constraints>
@@ -166,6 +166,9 @@
                     </view>
                     <connections>
                         <outlet property="collection_view" destination="5Zp-Vo-n3t" id="e22-rO-cBG"/>
+                        <outlet property="instrucciones" destination="UQP-aS-4Md" id="m27-9O-zfi"/>
+                        <outlet property="numero_aciertos" destination="eNH-WZ-iVI" id="zc4-7d-CaE"/>
+                        <outlet property="use_feedback" destination="19V-Wx-BPK" id="PqS-pq-Dk5"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ipu-aK-YqQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
