--- a/memoria/Base.lproj/Main.storyboard
+++ b/memoria/Base.lproj/Main.storyboard
@@ -143,19 +143,13 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0/9 Aciertos" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eNH-WZ-iVI">
-                                        <rect key="frame" x="39.000000000000007" y="70.333333333333329" width="110.66666666666669" height="20.333333333333329"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="110.66666666666666" id="LFy-iA-Ifr"/>
-                                        </constraints>
+                                        <rect key="frame" x="47.666666666666664" y="70.333333333333329" width="93.666666666666686" height="20.333333333333329"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gkc-LT-EP1">
-                                        <rect key="frame" x="73" y="90.666666666666671" width="43" height="30"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="43" id="bVu-ii-hhE"/>
-                                        </constraints>
+                                        <rect key="frame" x="47.333333333333343" y="90.666666666666671" width="94" height="30"/>
                                         <state key="normal" title="Volver a jugar"/>
                                         <connections>
                                             <action selector="volver_pantalla1:" destination="pt2-wu-ixz" eventType="touchUpInside" id="F2Z-pe-Mdw"/>
